# hmepy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  test.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
hmepy/: __init__.py  correlations.py  diagnostics.py  emulator.py  emutils.py  fullwave.py  genpoints.py  implausibility.py  modeltraining.py  utils.py  version.py
src/hmepy/: __init__.py
tests/: correlation_test.py  emulator_test.py  test_hmepy.py
