[tool.poetry]
name = "hmepy"
version = "1.7.0"
description = "History Matching and Emulation for Python"
authors = ["Andrew Iskauskas, TJ McKinley"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
